Minor tweaks, debugging Supabase

--- a/packages/annotorious-supabase/test/index.html
+++ b/packages/annotorious-supabase/test/index.html
@@ -67,6 +67,11 @@
         var config = await fetch('config.json').then((response) => response.json());
         
         var supabase = SupabasePlugin(anno, config);
+
+        supabase.on('presence', function(users) {
+          console.log('presence change', users);
+        });
+
         supabase.connect();
         
         fetch('annotations.json').then((response) => response.json())
