--- a/packages/annotorious-openseadragon/test/index.html
+++ b/packages/annotorious-openseadragon/test/index.html
@@ -74,6 +74,7 @@
 
         anno.on('createAnnotation', a => console.log('created', a));
         anno.on('deleteAnnotation', a => console.log('deleted', a));
+        anno.on('selectionChanged', selected => console.log('selection', selected));
         anno.on('updateAnnotation', (a, previous) => console.log('updated', previous, 'with', a));
       }
     </script>
