--- a/packages/annotorious-react/test/index.html
+++ b/packages/annotorious-react/test/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Annotorious React</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+      
+      .openseadragon {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
