Proof of concept: image annotation presence layer

--- a/packages/annotorious-supabase/test/index.html
+++ b/packages/annotorious-supabase/test/index.html
@@ -124,6 +124,7 @@
           console.log('save error', error);
         })
 
+        console.log('Connecting Supabase');
         supabase.connect();
 
         document.getElementById('draw').addEventListener('click', function() {
