Added presence select indication for polygon shapes

--- a/packages/annotorious-supabase/test/index.html
+++ b/packages/annotorious-supabase/test/index.html
@@ -128,7 +128,7 @@
         supabase.connect();
 
         document.getElementById('draw').addEventListener('click', function() {
-          anno.startDrawing('box');
+          anno.startDrawing('polygon');
         });
       }
     </script>
