--- a/packages/annotorious-react/test/index.html
+++ b/packages/annotorious-react/test/index.html
@@ -14,6 +14,11 @@
         height: 100vh;
         width: 100vw;
       }
+
+      .popup {
+        background-color: #fff;
+        padding: 20px;
+      }
     </style>
   </head>
   <body>
